--- a/sass/style.css
+++ b/sass/style.css
@@ -12,16 +12,195 @@ html {
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Poppins', sans-serif;
+}
+
+button {
+  all: unset;
 }
 
 a {
   color: black;
-  text-decoration: underline;
 }
 
 img {
   max-width: 100%;
   max-height: 100%;
+}
+
+main {
+  padding-bottom: 3em;
+}
+
+.main_inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.inner {
+  width: 90%;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.container {
+  justify-items: center;
+  grid-gap: 2em;
+  margin-top: 5em;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  max-width: 800px;
+}
+
+.class {
+  background: white;
+  color: black;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 1.5em 2em;
+  aspect-ratio: 1/1;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 1em;
+  border-radius: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 250px;
+  cursor: pointer;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+h1 {
+  font-size: 2.5rem;
+  margin: 1.5em 0 1em;
+}
+
+input {
+  border: none;
+  outline: none;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 1em;
+  margin-top: 1em;
+  border-radius: 2em;
+}
+
+.class_title {
+  font-size: 1.8rem;
+}
+
+.class_image {
+  max-height: 70%;
+  padding: 1em;
+}
+
+.fork {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 150px;
+}
+
+.counter_sign {
+  min-width: 15px;
+  cursor: pointer;
+}
+
+.counter_sign:disabled {
+  opacity: 0.3;
+}
+
+.counter {
+  background: white;
+  color: black;
+  margin-top: 20px;
+  padding: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 5px;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+  min-width: 110px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.counter_number {
+  padding: 0 5px;
+  font-size: 2rem;
+  font-weight: 800;
+}
+
+.color-mode {
+  position: absolute;
+  right: 40px;
+  cursor: pointer;
+  padding: 5px;
+  bottom: 40px;
+  height: 60px;
+}
+
+.dark-mode {
+  background: black;
+  color: white;
+}
+
+.dark-mode .class {
+  -webkit-box-shadow: 0 0 15px rgba(255, 255, 255, 0.9);
+          box-shadow: 0 0 15px rgba(255, 255, 255, 0.9);
+}
+
+.dark-mode .counter {
+  -webkit-box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
+          box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
+}
+
+@media screen and (max-width: 860px) {
+  .container {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  .color-mode {
+    height: 40px;
+    top: 20px;
+    left: 20px;
+  }
+  .fork {
+    width: 100px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
 }
 /*# sourceMappingURL=style.css.map */
